--- a/WPF/NumberBox/NumberBox/MainWindow.xaml
+++ b/WPF/NumberBox/NumberBox/MainWindow.xaml
@@ -6,5 +6,7 @@
         xmlns:local="clr-namespace:NumberBox"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" Background="#FF1A1A1A">
-    <Grid x:Name="grid"/>
+    <Grid x:Name="grid">
+        <Label x:Name="label" Content="" HorizontalAlignment="Left" Height="88.5" Margin="29,301.5,0,0" VerticalAlignment="Top" Width="136.5" Background="White"/>
+    </Grid>
 </Window>
